--- a/css_project/576min.css
+++ b/css_project/576min.css
@@ -354,4 +354,405 @@ opacity: .5;
 padding-bottom: 20px;
 
 }
+/* About us  */
+
+/* section1  */
+.about{
+  height: 50px;
+  background-color: #999c9f;    
+} 
+.about .top ul{
+  margin-left: 100px;
+  padding-top: 10px;
+}
+.about  .top ul li{
+  display: inline;
+  padding: 2px;
+  
+}
+.about  .top ul li {
+  font-size: 18px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: rgb(118, 113, 113);
+  
+}
+.about  .top ul li a{
+  text-decoration: none;
+  color: #da9d40;
+}
+/* .section2 */
+
+.a-section2 .text{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  margin: 100px 0px 20px 0px;
+}
+.a-section2 .text .Integer{
+  width: 100%;
+  margin-left: 30px;
+  margin-right: 0px;
+}
+.a-section2 .text .Integer .container  h3{
+  font-size: 25px;
+  font-weight: 600;
+  word-spacing: 2px;
+
+}
+.a-section2 .text .Integer .container  h2{
+  font-size: 20px;
+  font-weight: 500;
+  word-spacing: 10px;
+  margin-top: 10px;
+  font-weight: 100;
+  letter-spacing: 5px;
+
+}
+.a-section2 .text .Integer .container p{
+  font-size: 15px;
+  margin-top: 10px;
+  margin-right: 20px;
+  line-height: 40px;
+}
+
+.a-section2 .text .img2{
+  width:100%;
+  margin:0px 10px 0px 30px;
+
+
+}
+.a-section2 .text .img2 img{
+  height: 400px;
+  width: 90%;
+
+}
+/* section3 */
+
+.a-section3 .text{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  flex-direction: unset;
+  text-align: center;
+}
+.a-section3 .text h1{
+  font-size: 35px;
+  margin: 100px 0px 0px 0px;
+  font-weight: 400;
+}
+.a-section3 .text p{
+  font-size: 17px;
+  margin: 30px 70px  ;
+  line-height: 35px;
+}
+.a-section3 .text button{
+  font-size: 20px;
+  margin: 20px;
+  padding: 13px 20px;
+  font-size: 20px;
+}
+
+/* .a-section4  */
+.a-section4 .our h1{
+  font-size: 30px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  text-align: center;
+  margin: 50px 0px 20px 0px;
+
+}
+.a-section4 .box{
+  display: flex;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  gap:30px 30px;
+  position: relative;
+  transition: all .2s ease-out 0s;
+  margin:0px 20px 0px 4px;
+}
+
+
+.a-section4 .box .img4 img{
+  width: 100%;
+  height: 299px;
+  background-color: #fff;
+  border: 1px solid #dee2e6;
+  border-radius: 0.25rem;
+  position: relative;
+  padding: 0.25rem;
+
+}
+.a-section4 .box .text {
+  position: absolute;
+  background-color: black;
+  top: 0%;
+  display: none;
+  height: 90%;
+  width: 90%;
+  margin: 5%;
+}
+.a-section4 .box .img1:hover .text {
+  display: block;
+  opacity: 0.5;
+  animation: aniy 0.9s;
+  z-index: 5;
+}
+@keyframes aniy {
+  0% {
+      transform: rotate3d(1, -1, 0, 0deg)
+  }
+
+  100% {
+      transform: rotate3d(1, -1, 0, 180deg)
+  }
+}
+.a-section4 .box .text:hover {
+  display: block;
+}
+.a-section4 .box .text h3{
+  color: white;
+  display: none;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.a-section4 .box .text p{
+  color: white;
+  display: none;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.a-section4 .box .text i{
+  color: white;
+  display: none;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+/* .section2  */
+
+
+.s-section2 .text{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: unset;
+  margin-bottom: 20px;
+}
+.s-section2 .text .Integer{
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(1,1fr);
+  gap:30px 30px;
+  margin:0px 50px;
+
+}
+.s-section2 .text .Integer .container{
+  box-shadow: 0px 0px 0px rgb(244, 243, 240);
+  text-align: center;
+}
+.s-section2 .text .Integer .container i{
+  font-size: 60px;
+  margin-top: 30px;
+
+}
+.s-section2 .text .Integer .container h1{
+  font-size: 20px;
+  margin-top: 10px;
+  font-weight: 500;
+
+}
+.s-section2 .text .Integer .container p{
+  font-size: 17px;
+  margin-top: 10px;
+  line-height: 30px;
+
+}
+/* .s-section3*/
+.s-section3{
+  display:grid;
+  grid-template-columns: repeat(1,1fr);
+  margin: 80px 0px 0px 0px;
+  gap: 10px;
+}
+.s-section3 .left{
+  position: relative;
+  color: white;
+}
+.s-section3 .left .img1{
+  width: 100%;
+}
+.s-section3 .left .img1 img{
+  width: 100%;
+  height: 500px;
+}
+.s-section3 .left .text{
+  position: absolute;
+  top: 0%;
+  left: 0px;
+} 
+.s-section3 .left .text h2{
+  font-size:20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 400px 0px 0px 160px;
+ letter-spacing: 5px;
+}
+
+.s-section3 .right{
+  position: relative;
+  color: white;
+
+}
+
+.s-section3 .right .top .img1 img{
+  width: 100%;
+  height: 240px;
+}
+.s-section3 .right .top .text{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+ 
+} 
+.s-section3 .right .top .text h2{
+  font-size:20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 165px 0px 0px 160px;
+  letter-spacing: 5px;
+
+}
+.s-section3 .right .bottom{
+  display:grid;
+  grid-template-columns: repeat(1,1fr);
+  margin-top: 15px;
+  gap: 10px;
+}
+
+.s-section3 .right .bottom .left{
+  position: relative;
+  color: white;
+  margin: 0px 0px 0px 0px;
+}
+.s-section3 .right .bottom .left .img2 img{
+  width: 100%;
+  height: 240px;
+}
+
+.s-section3 .right .bottom .left .text{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+.s-section3 .right .bottom .left .text h2{
+  font-size:20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 160px 0px 0px 220px;
+
+}
+.s-section3 .right .bottom .right{
+  position: relative;
+  color: white;
+}
+.s-section3 .right .bottom .right .img2 img{
+  width: 100%;
+  height: 240px;
+}
+.s-section3 .right .bottom .right .text{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+
+
+.s-section3 .right .bottom .right .text h2{
+  font-size:20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 160px 0px 0px 220px;
+
+
+} 
+ /* section4  */
+ .s-section4 .year{
+  position: relative;
+}
+.s-section4 .img3 img{
+height:600px;  
+width: 100%;
+}
+.s-section4 .text{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  text-align: center;
+}
+.s-section4 .text .left{
+  margin: 50px 0px 0px 0px;
+  width: 100%;
+}
+.s-section4 .text .left h1{
+  font-size: 35px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+.s-section4 .text .left p{
+  font-size: 19px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 25px 100px 25px 0px;
+  line-height: 35px;
+
+
+}
+.s-section4 .text .left h4{
+  font-size: 50px;
+
+}
+.s-section4 .text .left h4 em{
+  font-size: 25px;
+}
+.s-section4 .text .right{
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  margin: 50px 0px 0px 0px;
+  gap: 0px 0px;
+
+
+}
+.s-section4 .text .right .happy h6{
+  font-size: 18px;
+  font-weight: 300;
+  text-align: left;
+
+
+}
+.s-section4 .text .right .happy h1{
+  margin-top: 25px;
+  font-size: 40px;
+}
+.s-section4 .text .right .happy i{
+font-size: 25px;
+padding: 20px;
+margin-top: 20px;
+}
+/* gallary  */
+.g-section2 {
+  height:77rem;
+ }
+.g-section2  .box{
+ display: grid;
+ grid-template-columns: repeat(2,1fr);
+ width: 100%;
+ gap: 10px 0px;
+ padding: 10px 10%;
+ height: 350px;
+
+}
+/* contact  */
+
+.c-section2 .contact-form .row{
+  display: grid;
+  grid-template-columns: repeat(1,1fr);
+  gap: 15px;
+  margin-top: 50px ;
+}
+
 }
